@@ -21,10 +21,12 @@ importFrom(siggenes, pi0.est, qvalue.cal)
 importFrom(limma, squeezeVar, lmFit, eBayes, contrasts.fit)
 importFrom(preprocessCore, normalize.quantiles)
 importFrom(illuminaio, readIDAT)
+importFrom(genefilter, rowFtests, rowttests)
 importFrom(utils, packageVersion, read.csv, read.table)
 importFrom(bumphunter, bumphunter, clusterMaker, boundedClusterMaker)
 importMethodsFrom(bumphunter, bumphunter)
 importFrom(lattice, panel.abline, panel.stripplot, xyplot)
+importFrom(nlme, lme, getVarCov)
 
 export(getManifest, getProbeInfo, getManifestInfo,
        IlluminaMethylationManifest, IlluminaMethylationAnnotation,
@@ -45,7 +47,8 @@ export(getManifest, getProbeInfo, getManifestInfo,
        detectionP, qcReport, controlStripPlot, densityBeanPlot, densityPlot,
        getQC, plotQC, addQC, minfiQC, fixMethOutliers,
        getSex, plotSex, addSex, bumphunter,
-       blockFinder, cpgCollapse)
+       blockFinder, cpgCollapse,
+       estimateCellCounts)
 
 exportClasses(RGChannelSet, RGChannelSetExtended,
               MethylSet, RatioSet,
